mais ajustes focando java 8